HW/HW1/results/khanrayan_results.txt
HW\HW1\test\Tester.java:8: error: cannot access Point
		Point a = new Point(3.2,7);
		^
  bad class file: HW\HW1\bin\khanrayan\flatland\Point.class
    unable to access file: java.nio.file.NoSuchFileException: C:\Users\Aiden\OneDrive\Desktop\GOProjects\Auto-grader-repo\Auto-Grader\HW\HW1\bin\khanrayan\flatland\Point.class
    Please remove or make sure it appears in the correct subdirectory of the classpath.
HW\HW1\test\Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		^
  symbol:   class Segment
  location: class Tester
HW\HW1\test\Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		                  ^
  symbol:   class Segment
  location: class Tester
3 errors
